<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/gray_dark">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:src="@drawable/logo"/>

    <FrameLayout
        style="@style/Separator"
        android:layout_width="20dp"
        android:layout_height="1dp"/>
    <co.lowprofile.ooquo.view.common.text.CustomFontText
        style="@style/Text"
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:gravity="center_vertical"
        android:layout_weight="0.08"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_weight="0.3">

        <LinearLayout
            style="@style/InputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_dirty">

            <co.lowprofile.ooquo.view.common.text.CustomFontEditText
                style="@style/Input"
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"/>

            <FrameLayout
                style="@style/InputSeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <co.lowprofile.ooquo.view.common.text.CustomFontEditText
                style="@style/Input"
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13">

        <co.lowprofile.ooquo.view.common.button.CustomFontButton
            style="@style/Button"
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="0.08">

        <co.lowprofile.ooquo.view.common.text.CustomFontText
            style="@style/Text"
            android:id="@+id/haveAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"/>

        <co.lowprofile.ooquo.view.common.button.CustomFontButton
            style="@style/TextButton"
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>
    </LinearLayout>

</LinearLayout>
