<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/gray_dark">

    <co.lowprofile.ooquo.view.ui.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/photoButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:layout_below="@id/headerView"/>

    <LinearLayout
        style="@style/InputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/photoButton"
        android:orientation="vertical"
        android:background="@color/white_dirty">

        <co.lowprofile.ooquo.view.common.text.CustomFontEditText
            style="@style/Input"
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"/>

        <FrameLayout
            style="@style/InputSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <co.lowprofile.ooquo.view.common.text.CustomFontEditText
            style="@style/Input"
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"/>

        <FrameLayout
            style="@style/InputSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <co.lowprofile.ooquo.view.common.text.CustomFontEditText
            style="@style/Input"
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"/>

        <FrameLayout
            style="@style/InputSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <co.lowprofile.ooquo.view.common.text.CustomFontEditText
            style="@style/Input"
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"/>

        <FrameLayout
            style="@style/InputSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <co.lowprofile.ooquo.view.common.text.CustomFontEditText
            style="@style/Input"
            android:id="@+id/rePasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_password_hint"/>


    </LinearLayout>

    <co.lowprofile.ooquo.view.common.button.CustomFontButton
        style="@style/Button"
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/sign_up"/>
</RelativeLayout>
