<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark">

    <co.lowprofile.ooquo.view.ui.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <co.lowprofile.ooquo.view.common.text.CustomFontEditText
        style="@style/MultilineInput2"
        android:id="@+id/infoInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/headerView"
        android:hint="@string/info_hint"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoInput"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <co.lowprofile.ooquo.view.common.text.CustomFontText
            style="@style/NoSelectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_book_selected"/>

        <co.lowprofile.ooquo.view.ui.BookListItemView
            android:id="@+id/bookView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </FrameLayout>

    <co.lowprofile.ooquo.view.common.button.CustomFontButton
        style="@style/Button"
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/save_quote"/>

    <co.lowprofile.ooquo.view.common.button.CustomFontButton
        style="@style/Button"
        android:id="@+id/searchBookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@id/saveButton"
        android:text="@string/search_book"/>

</RelativeLayout>
