<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark">

    <co.lowprofile.ooquo.view.ui.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/photoButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/headerView"/>

    <LinearLayout
        style="@style/InputContainer"
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/photoButton"
        android:orientation="vertical"
        android:background="@color/white_dirty">

        <co.lowprofile.ooquo.view.common.text.CustomFontEditText
            style="@style/Input"
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"/>

        <FrameLayout
            style="@style/InputSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <co.lowprofile.ooquo.view.common.text.CustomFontEditText
            style="@style/Input"
            android:id="@+id/publishedYearInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/published_year_hint"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputContainer"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <co.lowprofile.ooquo.view.common.text.CustomFontText
            style="@style/NoSelectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_author_selected"/>

        <co.lowprofile.ooquo.view.ui.AuthorListItemView
            android:id="@+id/authorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </FrameLayout>


    <co.lowprofile.ooquo.view.common.button.CustomFontButton
        style="@style/Button"
        android:id="@+id/saveBookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/save_book"/>

    <co.lowprofile.ooquo.view.common.button.CustomFontButton
        style="@style/Button"
        android:id="@+id/searchAuthorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@id/saveBookButton"
        android:text="@string/search_author"/>

</RelativeLayout>
