<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:padding="20dp"
    android:orientation="vertical">

    <co.lowprofile.ooquo.view.common.text.CustomFontText
        style="@style/DetailTitle"
        android:id="@+id/authorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"/>

    <co.lowprofile.ooquo.view.common.text.CustomFontText
        style="@style/DetailText"
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <co.lowprofile.ooquo.view.common.text.CustomFontText
        style="@style/DetailTitle"
        android:id="@+id/publishedYearTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/publish_date"/>

    <co.lowprofile.ooquo.view.common.text.CustomFontText
        style="@style/DetailText"
        android:id="@+id/publishedYearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <co.lowprofile.ooquo.view.common.text.CustomFontText
        style="@style/DetailTitle"
        android:id="@+id/descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"/>

    <co.lowprofile.ooquo.view.common.text.CustomFontText
        style="@style/DetailText"
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
